# shell

./: .gitignore  AGENTS.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  index.d.ts  index.js  package.json  pyproject.toml  tsconfig.json
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/stamp-version/: action.yml
.github/scripts/: group-release-notes.py
.github/workflows/: ci.yml  pr-title.yml  release.yml
examples/: README.md  run-policies.sh
examples/policies/: 01-read-only.cedar  02-workspace-jail.cedar  03-mixed-controls.cedar  04-egress-allowlist.cedar  05-shield-secrets.cedar
python/strands_shell/: __init__.py
schemas/: agent.cedarschema
scripts/: build-wasm.sh
src/: cli.rs  exec.rs  io.rs  js.rs  lib.rs  main.rs  mcp.rs  mcp_client.rs  os.rs  parser.rs  policy.rs  prelude.rs  python.rs  shell.rs  vfs.rs  vfs_config.rs  vfs_kernel.rs  wasm_main.rs
src/builtins/: alias.rs  cd.rs  colon.rs  echo.rs  export.rs  find.rs  getopts.rs  hash.rs  local.rs  lua.rs  mod.rs  printf.rs  pwd.rs  read.rs  set.rs  shift.rs  test.rs  trap.rs  type_cmd.rs  umask.rs  unset.rs  wait.rs  xargs.rs
src/commands/: basename.rs  cat.rs  chmod.rs  cp.rs  curl.rs  cut.rs  date.rs  dirname.rs  echo.rs  env.rs  false.rs  grep.rs  head.rs  jq.rs  ln.rs  ls.rs  mkdir.rs  mktemp.rs  mod.rs  mv.rs  pwd.rs  readlink.rs  rm.rs  rmdir.rs  sed.rs  sleep.rs  sort.rs  tail.rs  tee.rs  touch.rs  tr.rs  true.rs  uniq.rs  wc.rs
strands-shell-macros/: Cargo.toml
strands-shell-macros/src/: lib.rs
tests/: config.rs  curl_integration.rs  lua_integration.rs  mcp_integration.rs  policy_integration.rs  shell_integration.rs  vfs_unit.rs
tests/js/: test_bindings.mjs  test_builder.mjs  test_config.mjs
tests/python/: test_bindings.py  test_builder.py  test_config.py
tests/ts/: api.types.ts
xtask/: Cargo.toml
xtask/src/: main.rs
