[package]
name = "strands-shell-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for strands-shell"
license = "Apache-2.0"
repository = "https://github.com/strands-agents/shell"
homepage = "https://github.com/strands-agents/shell"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
